[package]
name = "JamiesMiscLibrary"
version = "0.0.5"
edition = "2021"

license = "Unlicense"
description = "A little library of miscellaneous thingamabobs for my personal use"
readme = "README.md"

[lib]
name = "jml"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/integration_tests.rs"


[dependencies]
device_query = "1.1.3"
minifb = "0.24.0"
num-traits = "0.2.15"
